# Fitness_Tracker_DB

./: .gitignore  README.md  asset-manifest.json  index.html  package-lock.json  package.json
.bmad-core/: install-manifest.yaml
.github/workflows/: ci.yml
backend/drf/: .env.example  README.md  manage.py  pyproject.toml  requirements.txt
backend/drf/fitness_api/: asgi.py  settings.py  settings_test.py  urls.py  wsgi.py
backend/drf/fitness_api/api/: admin.py  auth.py  jwt_auth.py  models.py  openapi_ext.py  serializers.py  urls.py  views.py
backend/drf/fitness_api/api/migrations/: 0001_initial.py  0002_alter_programroutine_id_alter_routineexercise_id_and_more.py
backend/drf/fitness_api/api/tests/: test_auth_and_me.py
backend/react_php_app/: api.php
docs/: bmad_plan_tareas_asignaciones.md  erd_mermaid.md  especificacion_funcional_tecnica.md  fitness_tracker.sql  prd_fitness_tracker.md  progress_and_plan.md  runbook_local_dev.md
docs/openapi/: openapi-v1.yaml
docs/sqlserver/: fitness_tracker.sql  legacy_to_modern_mapping.md
frontend/: .env  LICENSE  package.json
frontend/src/: App.js  i18n.js  index.js
locales/en/: translation.json
locales/es/: translation.json
public/: index.html
scripts/: setup_backend.sh  start_fullstack.sh
src/: App.js
src/components/: Navbar.css  Navbar.js
src/pages/: AchievementsPage.js  Dashboard.js  ExercisesPage.js  GoalsPage.js  LoginPage.js  ProgramsPage.js  Progress.js  RoutinesPage.js  SessionsPage.js
static/css/: main.589be41c.css  main.589be41c.css.map
static/js/: main.2c512e92.js  main.2c512e92.js.map
(+32 files in other folders)
